[tool.poetry]
name = "apilayer-1-0"
version = "0.1.0"
description = ""
authors = ["d.larin <larin.dn@icloud.com>"]
readme = "README.md"
packages = [{include = "apilayer_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
